--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "private": true,
   "devDependencies": {
-    "@unicode/unicode-14.0.0": "^1.2.1"
+    "@unicode/unicode-15.0.0": "^1.3.0"
   },
   "scripts": {
-    "build": "node build.js"
+    "build": "node build.js && du --summarize --bytes output"
   }
 }
